Fix navbar bug on mobile

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -144,7 +144,7 @@ nav .fa {
     background: #6499E9;
     height: 100vh;
     width: 200px;
-    top: -1000px;
+    top: -1500px;
     right: 0px;
     text-align: left;
     z-index: 2;
